@@ -107,6 +107,7 @@ loadmodule sch_sfq
 loadmodule sch_ingress
 loadmodule sch_htb
 loadmodule cls_u32
+loadmodule cls_fw
 loadmodule act_police
 #
 # Extensions
