@@ -222,6 +222,11 @@ start_command() {
 			    FAST=Yes
 			    option=${option#f}
 			    ;;
+			p*)
+			    [ -n "$(which conntrack)" ] || fatal_error "The '-p' option requires the conntrack utility which does not appear to be installed on this system"
+			    PURGE=Yes
+			    option=${option%p}
+			    ;;
 			*)
 			    usage 1
 			    ;;
@@ -311,6 +316,11 @@ restart_command() {
 			    NOROUTES=Yes
 			    option=${option#n}
 			    ;;
+			p*)
+			    [ -n "$(which conntrack)" ] || fatal_error "The '-p' option requires the conntrack utility which does not appear to be installed on this system"
+			    PURGE=Yes
+			    option=${option%p}
+			    ;;
 			*)
 			    usage 1
 			    ;;
@@ -371,11 +381,11 @@ usage() # $1 = exit status
     echo "   logwatch [<refresh interval>]"
     echo "   reject <address> ..."
     echo "   reset"
-    echo "   restart [ -n ]"
+    echo "   restart [ -n ] [ -p ]"
     echo "   restore [ -n ] [ <file name> ]"
     echo "   save [ <file name> ]"
     echo "   show [ -x ] [ -m ] [ -f ] [ -t {filter|mangle|nat} ] [ {chain [<chain> [ <chain> ... ]|capabilities|classifiers|config|connections|filters|ip|log|mangle|nat|routing|tc|vardir|zones} ]"
-    echo "   start [ -f ] [ -n ]"
+    echo "   start [ -f ] [ -n ] [ -p ]"
     echo "   stop"
     echo "   status"
     echo "   version"
