@@ -190,7 +190,7 @@
       <arg>-<replaceable>options</replaceable></arg>
 
       <arg
-      choice="plain"><option>restart</option><arg><option>-n</option></arg></arg>
+      choice="plain"><option>restart</option><arg><option>-n</option></arg><arg><option>-p</option></arg></arg>
     </cmdsynopsis>
 
     <cmdsynopsis>
@@ -316,7 +316,7 @@
 
       <arg><option>-n</option></arg>
 
-      <arg><option>-f</option></arg>
+      <arg><option>-f</option><arg><option>-p</option></arg></arg>
     </cmdsynopsis>
 
     <cmdsynopsis>
@@ -580,9 +580,14 @@
         <listitem>
           <para>Restart is similar to <emphasis role="bold">shorewall-lite
           stop</emphasis> followed by <emphasis role="bold">shorewall-lite
-          start</emphasis>. Existing connections are maintained. The
-          <option>-n</option> option causes Shorewall to avoid updating the
-          routing table(s).</para>
+          start</emphasis>. Existing connections are maintained.</para>
+
+          <para>The <option>-n</option> option causes Shorewall to avoid
+          updating the routing table(s).</para>
+
+          <para>The <option>-p</option> option causes the connection tracking
+          table to be flushed; the <command>conntrack</command> utility must
+          be installed to use this option.</para>
         </listitem>
       </varlistentry>
 
@@ -763,10 +768,14 @@
           saved configuration specified by the RESTOREFILE option in <ulink
           url="shorewall-lite.conf.html">shorewall-lite.conf</ulink>(5) will
           be restored if that saved configuration exists and has been modified
-          more recently than the files in /etc/shorewall.</para>
+          more recently than the files in /etc/shorewall. </para>
 
           <para>The <option>-n</option> option causes Shorewall to avoid
           updating the routing table(s).</para>
+
+          <para>The <option>-p</option> option causes the connection tracking
+          table to be flushed; the <command>conntrack</command> utility must
+          be installed to use this option.</para>
         </listitem>
       </varlistentry>
 
