@@ -354,6 +354,8 @@
 
       <arg><option>-n</option></arg>
 
+      <arg><option>-p</option></arg>
+
       <arg><option>-C</option> <option>{shell|perl}</option></arg>
 
       <arg><replaceable>directory</replaceable></arg>
@@ -522,6 +524,8 @@
       <arg><option>-C</option> <option>{shell|perl}</option></arg>
 
       <arg><option>-f</option></arg>
+
+      <arg><option>-n</option></arg>
 
       <arg><replaceable>directory</replaceable></arg>
     </cmdsynopsis>
@@ -1056,6 +1060,10 @@
           <para>The <option>-n</option> option causes Shorewall to avoid
           updating the routing table(s).</para>
 
+          <para>The <option>-p</option> option causes the connection tracking
+          table to be flushed; the <command>conntrack</command> utility must
+          be installed to use this option.</para>
+
           <para>The <option>-C</option> option determines the compiler to use
           (Shorewall-shell or Shorewall-perl). If not specified, the
           SHOREWALL_COMPILER setting in <ulink
@@ -1306,6 +1314,10 @@
 
           <para>The <option>-n</option> option causes Shorewall to avoid
           updating the routing table(s).</para>
+
+          <para>The <option>-p</option> option causes the connection tracking
+          table to be flushed; the <command>conntrack</command> utility must
+          be installed to use this option.</para>
 
           <para>The <option>-C</option> option determines the compiler to use
           (Shorewall-shell or Shorewall-perl). If not specified, the
