@@ -85,6 +85,12 @@ Problems Corrected in Shorewall 4.1.8
     the value of that variable was not passed to the shorewall[-lite]
     command.
 
+3)  With both Shorewall and Shorewall Lite, the 'start' and 'restart'
+    commands now support a '-p' option. This option causes the
+    Netfilter connection tracking table to be flushed (purged) as part
+    of the operation. The 'conntrack' utility must be installed to use
+    this option.
+
 Other Changes in Shoreall 4.1.8.
 
 1)  When using Shorewall-perl, the CEIL and RATE columns must now
