@@ -6,6 +6,8 @@ Changes in 4.1.8
 
 3)  Improvements in parsing.
 
+4)  Add the -p option to start and stop
+
 Changes in 4.1.7
 
 1)  Fix port verification.
